src/main/java/com/example/fooddelivery/error/CannotRate.java
package com.example.fooddelivery.error;

public class CannotRate extends RuntimeException{

    public CannotRate(String message){
        super(message);
    }
}
